Posts Like Dislike - Released new version
git-svn-id: https://plugins.svn.wordpress.org/posts-like-dislike/trunk@2131648 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/pld-backend.css
+++ b/css/pld-backend.css
@@ -81,3 +81,7 @@ span.pld-preview-holder img {
     height: 300px;
     overflow-y: scroll;
 }
+label.pld-checkbox-label {
+    display: block;
+    margin-bottom: 10px;
+}
