Don't hard code field widths in pixels
If you do it breaks if you move the gutenburg widget to the sidebar instead of bellow the main body.

Instead just make sure the width is set to 100% so it changes to fit the given space, which will be more than enough for simple integers.

--- a/css/pld-backend.css
+++ b/css/pld-backend.css
@@ -24,17 +24,18 @@ span.pld-avatar-holder {
 .pld-field-wrap > label {
     display: inline-block;
     font-weight: 500;
-    width: 250px;
+    width: 100%;
     vertical-align: top;
 }
 .pld-field {
     display: inline-block;
+    width: 100%;
 }
 .pld-each-template-preview {
     margin-top: 20px;
 }
 .pld-field input[type="text"] {
-    width: 500px;
+    width: 100%;
 }
 span.pld-avatar-holder img {
     border: 2px solid #f1f1f1;
