Rename the css files.

--- a/css/jlad-backend.css
+++ b/css/jlad-backend.css
@@ -1,49 +1,49 @@
-.pld-header {
+.jlad-header {
     background: #c1351e;
     padding: 15px;
     margin-bottom: 25px;
 }
 
-.pld-settings-section-wrap {
+.jlad-settings-section-wrap {
     background: #fff;
     min-height: 370px;
     margin-top: 20px;
     padding:20px
 }
-span.pld-avatar-holder {
+span.jlad-avatar-holder {
     float: right;
     margin-top: -31px;
     margin-right: -14px;
 }
-.pld-clear {
+.jlad-clear {
     clear: both;
 }
-.pld-field-wrap {
+.jlad-field-wrap {
     margin-bottom: 20px;
 }
-.pld-field-wrap > label {
+.jlad-field-wrap > label {
     display: inline-block;
     font-weight: 500;
     width: 100%;
     vertical-align: top;
 }
-.pld-field {
+.jlad-field {
     display: inline-block;
     width: 100%;
 }
-.pld-each-template-preview {
+.jlad-each-template-preview {
     margin-top: 20px;
 }
-.pld-field input[type="text"] {
+.jlad-field input[type="text"] {
     width: 100%;
 }
-span.pld-avatar-holder img {
+span.jlad-avatar-holder img {
     border: 2px solid #f1f1f1;
     margin-top: -1px;
     margin-right: -1px;
 }
-.pld-header h3{color:#fff;}
-.pld-info-wrap {
+.jlad-header h3{color:#fff;}
+.jlad-info-wrap {
     background: #257924;
     color: #fff;
     position: fixed;
@@ -51,38 +51,38 @@ span.pld-avatar-holder img {
     left: 45%;
     padding: 10px;
 }
-img.pld-loader {
+img.jlad-loader {
     margin-right: 10px;
     vertical-align: middle;
     margin-top: -3px;
 }
-.pld-close-info {
+.jlad-close-info {
     margin-left: 20px;
     cursor: pointer;
 }
-span.pld-preview-holder {
+span.jlad-preview-holder {
     width: 50px;
     display: block;
     vertical-align: top;
     margin-top: 10px;
 }
-span.pld-preview-holder img {
+span.jlad-preview-holder img {
     max-width: 100% !important;
 }
-.pld-separator {
+.jlad-separator {
     border-bottom: 1px solid #bbb;
     padding: 10px;
 }
-.pld-settings-section-wrap pre {
+.jlad-settings-section-wrap pre {
     border-left: 5px solid #258ef7;
     background: #eee;
     padding: 5px;
 }
-.pld-fixed-height {
+.jlad-fixed-height {
     height: 300px;
     overflow-y: scroll;
 }
-label.pld-checkbox-label {
+label.jlad-checkbox-label {
     display: block;
     margin-bottom: 10px;
 }
