--- a/css/jlad-frontend.css
+++ b/css/jlad-frontend.css
@@ -1,61 +1,61 @@
-.pld-like-dislike-wrap {
+.jlad-like-dislike-wrap {
     display: inline-block;
     margin-bottom:20px;
 }
-.pld-common-wrap {
+.jlad-common-wrap {
     display: inline-block;
     min-width: 50px;
 }
-.pld-common-wrap > a.pld-like-dislike-trigger {
+.jlad-common-wrap > a.jlad-like-dislike-trigger {
     text-decoration: none;
     box-shadow: 0 0 0 !important;
     border-bottom: 0;
 }
-.pld-count-wrap {
+.jlad-count-wrap {
     margin-left: 5px;
 }
-.pld-share-wrap {
+.jlad-share-wrap {
     display: inline-block;
     margin-left: 50px;
 }
-.pld-share-wrap a {
+.jlad-share-wrap a {
     box-shadow: 0 0 0 !important;
     margin: 0 10px;
     border:1px solid #fff;
 }
-a.pld-facebook {
+a.jlad-facebook {
     background: #3b5998 !important;
     color: #fff !important;
     display: inline-block;
     text-align: center;
     padding: 5px 10px;
 }
-a.pld-twitter {
+a.jlad-twitter {
     background: #55acee !important;
     color: #fff !important;
     display: inline-block;
     text-align: center;
     padding: 5px 7px;
 }
-a.pld-facebook:hover {
+a.jlad-facebook:hover {
     background: #fff !important;
     color: #3b5998 !important;
     border: 1px solid;
 }
-a.pld-twitter:hover {
+a.jlad-twitter:hover {
     background: #fff !important;
     color: #55acee !important;
     border: 1px solid;
 }
-.pld-like-dislike-wrap br{display:none;}
-.pld-like-dislike-wrap p{display:none;}
-.pld-like-dislike-wrap.pld-template-3 {
+.jlad-like-dislike-wrap br{display:none;}
+.jlad-like-dislike-wrap p{display:none;}
+.jlad-like-dislike-wrap.jlad-template-3 {
     margin-bottom: 20px;
 }
-.pld-like-dislike-wrap .pld-common-wrap {
+.jlad-like-dislike-wrap .jlad-common-wrap {
     margin-right: 10px;
 }
-.pld-like-dislike-wrap.pld-custom img {
+.jlad-like-dislike-wrap.jlad-custom img {
     max-width: 30px;
     display: inline-block;
     vertical-align: top;
