--- a/css/jlad-backend.css
+++ b/css/jlad-backend.css
@@ -42,12 +42,35 @@
 }
 
 .jlad-each-template-preview {
-    margin-top: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    padding-right: 10px;
+    font-size: 1.5em;
+    display: inline-block;
+}
+
+.jlad-template-preview {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.jlad-template-previews-wrap {
+    background: white;
+    display: inline-block;
 }
 
 .jlad-field input[type="text"] {
     width: 100%;
 }
+
+ .jlad-like-wrap a i {
+    width: 1em;
+ }
+
+ .jlad-dislike-wrap a i {
+    width: 1em;
+ }
 
 .jlad-header h3{color:#fff;}
 .jlad-info-wrap {
